fixed logo size, align main image, & write about me section and style initialy align elements

--- a/src/css/index-style.css
+++ b/src/css/index-style.css
@@ -1,9 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap');
+/*Color base D0D7D7 - http://paletton.com/ - greyish lightest*/
+
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    background-color: #C0C0C0;
+    background-color: #CED6D6;
 }
 
 li, a, button {
@@ -18,11 +20,12 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 5%;
+    padding: 2.5px 5%;
 }
 
 .logo-img {
     cursor: pointer;
+    height: 50px;
 }
 
 .nav-links {
@@ -44,7 +47,7 @@ header {
 
 button {
     padding: 9px 25px;
-    background-color: rgba(169, 169, 169, 1);
+    background-color: rgba(126, 140, 140, 1);
     border: none;
     border-radius: 50px;
     cursor: pointer;
@@ -52,22 +55,43 @@ button {
 }
 
 button:hover {
-    background-color: rgba(169, 169, 169, 0.8);
+    background-color: rgba(126, 140, 140, 0.8);
 }
 
 #banner {
-    position: relative;
-    text-align: center;
+    Position: relative;
+    min-height: 100vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-image: url(../img/index/Main-banner-background.jpg);
+    background-size: cover;
+    background-position: top center;
+    z-index: 1;
 }
 
-#banner h1 {
+#banner::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    background-color: #000000;
+    opacity: 0.6;
+    z-index: -1;
+}
+
+section h1 {
     font-family: "Rubik", sans-serif;
     font-weight: 500;
     font-size: 48px;
-    color: #DCDCDC;
 }
 
 .my-name {
+    text-align: right;
+    color: #DCDCDC;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -75,7 +99,57 @@ button:hover {
     background-color: transparent;
 }
 
-#Main-banner {
-    height: 100vh;
-    max-width: 100%;
+.my-name span {
+    color: #A1D1A1;
+    background-color: transparent;
+}
+
+#Description {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    width: 100%;
+}
+
+#about-me-container {
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    width: 70vw;
+    display: flex;
+    align-items: center;
+}
+
+about-me-immage, about-me {
+    position: relative;
+    display: inline-block;
+}
+
+.about-me-image {
+    background-color: #A8BAA8;
+    width: 500px;
+    height: 300px;
+    margin: 10px;
+    padding: 1px;
+}
+
+.about-me {
+    margin: 15px;
+    padding: 5px;
+    text-align: justify;
+}
+
+.about-me h2, p {
+    font-family: "Rubik", sans-serif;
+    font-weight: 500;
+}
+
+.about-me h2 {
+    font-size: 30px;
+    margin-bottom: 20px;
+}
+
+.about-me p {
+    font-size: 21px;
 }
